fixed userFavs bug when page renders after logout.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jwt-boilerplate",
+  "name": "the-board-game-compendium",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
